# invoice-langgraph

./: .gitignore  Arch.md  Makefile  README.md  STRUCTURE_CHECKLIST.md  docker-compose.yml  task.txt
backend/: .env.example  pyproject.toml  requirements.txt  workflow.json
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  human_review.py  invoke.py  logs.py  router.py  workflows.py
backend/app/bigtool/: __init__.py  base.py  picker.py  registry.py
backend/app/bigtool/tools/: __init__.py
backend/app/bigtool/tools/db/: __init__.py  base.py  dynamodb.py  postgres.py  sqlite.py
backend/app/db/: __init__.py  checkpoint_store.py  database.py  models.py
backend/app/graph/: __init__.py  builder.py  routing.py  state.py
backend/app/graph/nodes/: __init__.py  approve.py  base.py  checkpoint.py  complete.py  hitl_decision.py  intake.py  match.py  notify.py  posting.py  prepare.py  reconcile.py  retrieve.py  understand.py
backend/app/mcp/: __init__.py  atlas_server.py  common_server.py  router.py
backend/app/schemas/: __init__.py  human_review.py  invoice.py  logs.py  workflow.py
backend/app/services/: __init__.py  review_service.py  workflow_service.py
backend/app/utils/: __init__.py  exceptions.py  helpers.py  logger.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_human_review.py  test_invoke.py  test_workflows.py
backend/tests/test_bigtool/: __init__.py  test_picker.py
backend/tests/test_graph/: test_nodes.py  test_routing.py
backend/tests/test_mcp/: __init__.py  test_router.py
demo/: README.md
(+101 files in other folders)
