 [project]
 name = "invoice-langgraph-backend"
 version = "1.0.0"
 description = "LangGraph Invoice Processing Agent with HITL"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "langgraph>=0.2.0",
     "langchain>=0.3.0",
     "langchain-core>=0.3.0",
     "langchain-anthropic>=0.2.0",
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
     "sse-starlette>=2.1.0",
     "python-multipart>=0.0.12",
     "pydantic>=2.9.0",
     "pydantic-settings>=2.5.0",
     "sqlalchemy>=2.0.0",
     "aiosqlite>=0.20.0",
     "loguru>=0.7.0",
     "faker>=30.0.0",
     "python-dotenv>=1.0.0",
     "httpx>=0.27.0",
     "orjson>=3.10.0",
     "tenacity>=9.0.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.3.0",
     "pytest-asyncio>=0.24.0",
     "pytest-cov>=5.0.0",
     "ruff>=0.6.0",
 ]
 
 [tool.ruff]
 line-length = 100
 target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
 ignore = ["E501"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]

